third_party/move/move-compiler-v2/tests/checking-lang-v1/v1-typing/invalid_type_acquire.exp

Diagnostics:
error: invalid access specifier
   ┌─ tests/checking-lang-v1/v1-typing/invalid_type_acquire.move:18:9
   │
18 │         T,
   │         ^

error: not supported before language version `2.0`: address and wildcard access specifiers. Only resource type names can be provided.
   ┌─ tests/checking-lang-v1/v1-typing/invalid_type_acquire.move:18:9
   │
18 │         T,
   │         ^

error: invalid access specifier
   ┌─ tests/checking-lang-v1/v1-typing/invalid_type_acquire.move:19:9
   │
19 │         u64,
   │         ^^^

error: not supported before language version `2.0`: address and wildcard access specifiers. Only resource type names can be provided.
   ┌─ tests/checking-lang-v1/v1-typing/invalid_type_acquire.move:19:9
   │
19 │         u64,
   │         ^^^

error: type `u64` is missing required ability `key`
   ┌─ tests/checking-lang-v1/v1-typing/invalid_type_acquire.move:32:36
   │
32 │         destroy(account, move_from<u64>(a));
   │                                    ^^^
   │
   = required by instantiating type parameter `T:key` of function `move_from`

error: type `S` is missing required ability `key`
   ┌─ tests/checking-lang-v1/v1-typing/invalid_type_acquire.move:34:36
   │
34 │         destroy(account, move_from<S>(a));
   │                                    ^
   │
   = required by instantiating type parameter `T:key` of function `move_from`
